# tap-atlassian-scim

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_atlassian_scim/: client.py  pagination.py  streams.py  tap.py
tap_atlassian_scim/schemas/: groups.json  users.json
tap_atlassian_scim/tests/: __init__.py  test_core.py
tap_atlassian_scim/tests/mock/: config.py  util.py
tap_atlassian_scim/tests/mock/responses/: groups.json  users.json
tools/: insomnia_collection.json
