[tool.poetry]
name = "tap-atlassian-scim"
version = "0.0.1"
description = "`tap-atlassian-scim` is a Singer tap for atlassian-scim, built with the Meltano SDK for Singer Taps."
authors = ["CJ Gonzalez", "Robby Robinson"]
keywords = [
    "ELT",
    "atlassian-scim",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8.0"
singer-sdk = "^0.19.0"
fs-s3fs = { version = "^1.1.1", optional = true}
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
black = "^22.12.0"
pydocstyle = "^6.2.1"
mypy = "^0.991"
isort = "^5.12.0"
types-requests = "^2.28.11.7"
requests-mock = "^1.10.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_atlassian_scim"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-atlassian-scim = 'tap_atlassian_scim.tap:TapAtlassianScim.cli'
